src/pymicroscope/acquisition/epiphan/frmgrab.h


typedef struct _FrmGrabber FrmGrabber;

    
/**
 * Initialize/deinitialize frmgrab library. Both functions may be invoked
 * several times, but there must be FrmGrab_Deinit call per each FrmGrab_Init.
 */
void FrmGrab_Init(void);

void FrmGrab_Deinit(void);


/**
 * Functions specific to local frame grabbers.
 */
FrmGrabber* FrmGrabLocal_Open(void);


/**
 * Returns frame grabber's serial number.
 */
const char* FrmGrab_GetSN(FrmGrabber* fg);

/**
 * Returns the product description ("VGA2USB", "VGA2Ethernet", etc)
 */
const char* FrmGrab_GetProductName(FrmGrabber* fg);


/**
 * Returns a string that describes the location of the grabber ("USB,
 * "192.168.0.122", etc)
 */
const char* FrmGrab_GetLocation(FrmGrabber* fg);


/**
 * Returns the last known video mode, detecting is if necessary.
 * Unlike FrmGrab_DetectVideoMode, this function doesn't force the
 * video mode detection, but most of the time it's accurate enough.
 * Note that video mode detection is a relatively expensive operation.
 */
void FrmGrab_GetVideoMode(FrmGrabber* fg, V2U_VideoMode* vm);


/**
 * Detects current video mode. If no signal is detected, the output
 * V2U_VideoMode structure is zeroed.
 */
V2U_BOOL FrmGrab_DetectVideoMode(FrmGrabber* fg, V2U_VideoMode* vm);


/**
 * Queries current VGA capture parameters.
 */
V2U_BOOL FrmGrab_GetGrabParams(FrmGrabber* fg, V2U_GrabParameters* gp);


/**
 * Queries current VGA capture parameters and adjustment ranges in one shot.
 * More efficient for network grabbers. FrmGrab_GetGrabParams2(fg,gp,NULL)
 * is equivalent to FrmGrab_GetGrabParams(fg,gp)
 */
V2U_BOOL FrmGrab_GetGrabParams2(FrmGrabber* fg, V2U_GrabParameters* gp,
    V2UAdjRange* range);


/**
 * Sets VGA capture parameters.
 */
V2U_BOOL FrmGrab_SetGrabParams(FrmGrabber* fg, const V2U_GrabParameters* gp);


/**
 * Queries the device property.
 */
V2U_BOOL FrmGrab_GetProperty(FrmGrabber* fg, V2U_Property* prop);


/**
 * Sets the device property.
 */
V2U_BOOL FrmGrab_SetProperty(FrmGrabber* fg, const V2U_Property* prop);


/**
 * VGA mode table can be queried or modified with a bunch of GetProperty
 * or SetProperty calls, but getting and settinng the entire VGA mode table
 * with one call is more efficient, especially for network frame grabbers.
 * Number of custom modes doesn't exceed V2U_CUSTOM_VIDEOMODE_COUNT. The
 * whole FrmGrabVgaModes structure returned by FrmGrab_GetVGAModes is
 * allocated as a single memory block. The caller is responsible for
 * deallocating it with with a single FrmGrab_Free call.
 */
typedef struct _FrmGrabVgaModes {
    V2UVideoModeDescr* customModes; /* Custom modes */
    V2UVideoModeDescr* stdModes;    /* Standard modes */
    int numCustomModes;             /* Number of custom modes */
    int numStdModes;                /* Number of standard modes */
} FrmGrabVgaModes;


/**
 * Gets VGA mode table. The returned pointer must be deallocated
 * with FrmGrab_Free()
 */
FrmGrabVgaModes* FrmGrab_GetVGAModes(FrmGrabber* fg);


/**
 * Sets VGA mode table. Custom modes can be modified, standard modes can only
 * enabled or disabled (VIDEOMODE_TYPE_ENABLED flag).
 */
V2U_BOOL FrmGrab_SetVGAModes(FrmGrabber* fg, const FrmGrabVgaModes* vgaModes);


/**
 * Sends PS/2 events to the frame grabber (KVM capable products only).
 */
V2U_BOOL FrmGrab_SendPS2(FrmGrabber* fg, const V2U_SendPS2* ps2);


/**
 * Sets intended frame rate limit (average number of FrmGrab_Frame calls per
 * second). The frame grabber may use this hint to reduce resource usage,
 * especially in low fps case.
 */
V2U_BOOL FrmGrab_SetMaxFps(FrmGrabber* fg, double maxFps);


/**
 * Signals the grabber to prepare for capturing frames with maximum
 * frame rate. While it currently doesn't matter for local grabbers, it's
 * really important for network grabbers (it turns streaming on, otherwise
 * FrmGrab_Frame will have to work on request/response basis, which is
 * much slower). Returns V2U_TRUE if streaming is supported, or V2U_FALSE
 * if this call has no effect.
 */
V2U_BOOL FrmGrab_Start(FrmGrabber* fg);


/**
 * Signals the grabber to stop capturing frames with maximum frame rate.
 */
void FrmGrab_Stop(FrmGrabber* fg);


/**
 * Grabs one frame. The caller doesn't have to call FrmGrab_Start first,
 * but it's recommended in order to get maximum frame rate. 
 *
 * The second parameter is the capture format, i.e. one of
 * V2U_GRABFRAME_FORMAT_* constants defined in v2u_defs.h
 *
 * The last parameter is a pointer to the requested crop rectangle. Pass
 * NULL if you need the whole frame.
 */
V2U_GrabFrame2* FrmGrab_Frame(FrmGrabber* fg, V2U_UINT32 format,
    const V2URect* crop);


/**
 * Releases the frame previously returned by FrmGrab_Frame
 */
void FrmGrab_Release(FrmGrabber* fg, V2U_GrabFrame2* frame);


/**
 * Closes the frame grabber and invalidates the handle.
 */
void FrmGrab_Close(FrmGrabber* fg);


/**
 * Deallocates memory allocated by frmgrab.
 */
void FrmGrab_Free(void* ptr);


/** Memory allocation callbacks */
typedef void* (*FrmGrabMemAlloc)(void* param, V2U_UINT32 len);

typedef void (*FrmGrabMemFree)(void* param, void* ptr);


typedef struct _FrmGrabMemCB {
    FrmGrabMemAlloc alloc;
    FrmGrabMemFree free;
} FrmGrabMemCB;


/**
 * Sets functions for allocating and deallocating memory for the frame
 * buffers. NOTE that these callbacks are ONLY invoked to allocate memory
 * for the frame buffer. For all other allocations, frmgrab library uses
 * its own allocator. The allocator and deallocator callbacks may be invoked
 * in arbitrary thread context, not necessarily the thread that invokes
 * FrmGrab_Frame. The contents of FrmGrabMemCB is copied to internal storage.
 */
void FrmGrab_SetAlloc(FrmGrabber* fg, const FrmGrabMemCB* memcb, void* param);