src/pymicroscope/acquisition/epiphan/v2u_defs.h


typedef unsigned __int8 V2U_UINT8;

typedef __int32 V2U_INT32;

typedef unsigned __int32 V2U_UINT32;

typedef unsigned char V2U_UINT8;

typedef long V2U_INT32;

typedef unsigned long V2U_UINT32;

typedef uint8_t V2U_UINT8;

typedef int32_t V2U_INT32;

typedef uint32_t V2U_UINT32;

#define V2U_TRUE  1

typedef struct v2u_size {
    V2U_INT32 width;
    V2U_INT32 height;
} V2U_PACKED V2USize;


typedef struct v2u_rect {
    V2U_INT32 x;
    V2U_INT32 y;
    V2U_INT32 width;
    V2U_INT32 height;
} V2U_PACKED V2URect;


typedef struct v2u_str_ucs2 {
    V2U_UCS2* buffer;       /* not necessarily NULL-terminated */
    V2U_UINT32 len;         /* string length, in characters */
    V2U_UINT32 maxlen;      /* buffer size, in characters */
} V2U_PACKED V2UStrUcs2;


/*
 * V2U_VideoMode
 *
 * Video mode descriptor.
 *
 * Note that the vertical refresh rate is measured in milliHertz. 
 * That is, the number 59900 represents 59.9 Hz.
 */
typedef struct ioctl_videomode {
    V2U_INT32  width;       /* screen width, pixels */
    V2U_INT32  height;      /* screen height, pixels */
    V2U_INT32  vfreq;       /* vertical refresh rate, mHz */
} V2U_PACKED V2U_VideoMode;


/* 
 * V2U_GrabParameters
 *
 * VGA capture parameters.
 *
 * Gain = Contrast
 * Offset =  Brightness
 */
typedef struct ioctl_setparams {
    V2U_UINT32 flags;       /* Validity flags for fields below             */
                            /* When any of the fields below is used,       */
                            /* corresponding V2U_FLAG_VALID_* flag  is set */
                            /* otherwise the field is ignored              */
    V2U_INT32  hshift;      /* Shifts image left (<0) or right(>0).        */
                            /* Valid range depends on the video mode.      */
                            /* Invalid values are rounded to the nearest   */
                            /* valid value                                 */
    V2U_UINT8  phase;       /* Pixel sampling phase, [0,31]                */
    V2U_UINT8  gain_r;      /* Gain for the red channel, [0,255]           */
    V2U_UINT8  gain_g;      /* Gain for the green channel, [0,255]         */
    V2U_UINT8  gain_b;      /* Gain for the blue channel, [0,255]          */
    V2U_UINT8  offset_r;    /* Offset for the red channel, [0,63]          */
    V2U_UINT8  offset_g;    /* Offset for the green channel, [0,63]        */
    V2U_UINT8  offset_b;    /* Offset for the blue channel, [0,63]         */
    V2U_UINT8  reserved;    /* added for alignment, don't use              */
    V2U_INT32  vshift;      /* Shifts image up or down                     */
                            /* Valid range depends on the video mode.      */
                            /* Invalid values are rounded to the nearest   */
                            /* valid value                                 */
    V2U_INT32  pllshift;    /* Adjusts the PLL value                       */
    V2U_UINT32 grab_flags;  /* Sets grab_flags V2U_GRAB_*                  */
    V2U_UINT32 grab_flags_mask; /* Marks which bits from grab_flags are used */
} V2U_PACKED V2U_GrabParameters;

/* 
 * V2U_SendPS2
 *
 * PS/2 packet descriptor.
 */
typedef struct ioctl_sendps2 {
    short addr;
    short len;
    unsigned char buf[64];
} V2U_PACKED V2U_SendPS2;

typedef struct ioctl_getsn {
    char sn[V2U_SN_BUFSIZ]; /* OUT serial number string */
} V2U_PACKED V2U_GetSN;

typedef struct v2u_adjustment_range {
    V2U_UINT32 flags;
    V2U_UINT32 valid_flags;
    V2U_INT16 hshift_min;
    V2U_INT16 hshift_max;
    V2U_INT16 phase_min;
    V2U_INT16 phase_max;
    V2U_INT16 offset_min;
    V2U_INT16 offset_max;
    V2U_INT16 gain_min;
    V2U_INT16 gain_max;
    V2U_INT16 vshift_min;
    V2U_INT16 vshift_max;
    V2U_INT16 pll_min;
    V2U_INT16 pll_max;
} V2U_PACKED V2UAdjRange;


/* Video mode descriptor */
typedef struct vesa_videomode {
    V2U_UINT32 VerFrequency;        /* mHz */
    V2U_UINT16 HorAddrTime;         /* pixels */
    V2U_UINT16 HorFrontPorch;       /* pixels */
    V2U_UINT16 HorSyncTime;         /* pixels */
    V2U_UINT16 HorBackPorch;        /* pixels */
    V2U_UINT16 VerAddrTime;         /* lines */
    V2U_UINT16 VerFrontPorch;       /* lines */
    V2U_UINT16 VerSyncTime;         /* lines */
    V2U_UINT16 VerBackPorch;        /* lines */
    V2U_UINT32 Type;                /* flags, see below */

#define VIDEOMODE_TYPE_VALID            0x01
#define VIDEOMODE_TYPE_ENABLED          0x02
#define VIDEOMODE_TYPE_SUPPORTED        0x04
#define VIDEOMODE_TYPE_DUALLINK         0x08
#define VIDEOMODE_TYPE_DIGITAL          0x10
#define VIDEOMODE_TYPE_INTERLACED       0x20
#define VIDEOMODE_TYPE_HSYNCPOSITIVE    0x40
#define VIDEOMODE_TYPE_VSYNCPOSITIVE    0x80

} V2U_PACKED V2UVideoModeDescr;

/*
 * The first 8 (V2U_CUSTOM_VIDEOMODE_COUNT) entries in the video mode table
 * are reserved for custom video modes. The remaining entries are standard
 * video modes.
 */
typedef struct custom_videomode {
    V2U_INT32 idx;
    V2UVideoModeDescr vesa_mode;
} V2U_PACKED V2UVGAMode;


typedef struct v2u_version {
    V2U_INT32 major;
    V2U_INT32 minor;
    V2U_INT32 micro;
    V2U_INT32 nano;
} V2U_PACKED V2UVersion;
/* Define V2UPropertyKey enum */
typedef enum v2u_property_key {
#define V2U_PROPERTY_KEY_ENUM(key,name,type,access) key,
    V2U_PROPERTY_LIST(V2U_PROPERTY_KEY_ENUM)
#undef V2U_PROPERTY_KEY_ENUM
    V2UKey_Count        /* Number of known properties */
} V2UPropertyKey;


typedef struct v2u_ioctl_property {
    V2UPropertyKey key;             /* IN      property key */
    V2UPropertyValue value;         /* IN/OUT  property value */
} V2U_PACKED V2U_Property;


/* 
 * V2U_GrabFrame
 *
 * Frame buffer.
 */
typedef struct ioctl_grabframe {
#define V2U_GrabFrame_Fields(pointer) \
    pointer     pixbuf;     /* IN  should be filled by user process */\
    V2U_UINT32  pixbuflen;  /* IN  should be filled by user process */\
    V2U_INT32   width;      /* OUT width in pixels */\
    V2U_INT32   height;     /* OUT height in pixels */\
    V2U_UINT32  bpp;        /* IN  pixel format */
    V2U_GrabFrame_Fields(void*)
} V2U_PACKED V2U_GrabFrame;


typedef struct ioctl_grabframe2 {
#define V2U_GrabFrame2_Fields(pointer) \
    pointer     pixbuf;     /* IN  should be filled by user process */\
    V2U_UINT32  pixbuflen;  /* IN  should be filled by user process */\
    V2U_UINT32  palette;    /* IN pixel format */\
    V2URect     crop;       /* IN/OUT cropping area; all zeros = full frame */\
    V2U_VideoMode mode;     /* OUT VGA mode */\
    V2U_UINT32  imagelen;   /* OUT size of the image stored in pixbuf */\
    V2U_INT32   retcode;    /* OUT return/error code */
    V2U_GrabFrame2_Fields(void*)
} V2U_PACKED V2U_GrabFrame2;

/* Bits that define image format */
#define V2U_GRABFRAME_FORMAT_MASK       0x0000ffff /* Image format mask */
#define V2U_GRABFRAME_FORMAT_RGB24      0x00000018
#define V2U_GRABFRAME_FORMAT_Y8         0x00000500