src/pymicroscope/acquisition/epiphan/epiphanlibwrapper.py


            cls.lib.FrmGrab_GetGrabParams2.argtypes = [
                FrmGrabberPtr,
                c_void_p,
                c_void_p,
            ]
            cls.lib.FrmGrab_GetGrabParams2.restype = c_int

            cls.lib.FrmGrab_SetGrabParams.argtypes = [FrmGrabberPtr, c_void_p]
            cls.lib.FrmGrab_SetGrabParams.restype = c_int

            cls.lib.FrmGrab_GetProperty.argtypes = [FrmGrabberPtr, c_void_p]
            cls.lib.FrmGrab_GetProperty.restype = c_int

            cls.lib.FrmGrab_SetProperty.argtypes = [FrmGrabberPtr, c_void_p]
            cls.lib.FrmGrab_SetProperty.restype = c_int

            # VGA Modes
            cls.lib.FrmGrab_GetVGAModes.argtypes = [FrmGrabberPtr]
            cls.lib.FrmGrab_GetVGAModes.restype = (
                c_void_p  # Use actual struct if defined
            )

            cls.lib.FrmGrab_SetVGAModes.argtypes = [FrmGrabberPtr, c_void_p]
            cls.lib.FrmGrab_SetVGAModes.restype = c_int

            # PS2
            cls.lib.FrmGrab_SendPS2.argtypes = [FrmGrabberPtr, c_void_p]
            cls.lib.FrmGrab_SendPS2.restype = c_int

            # Streaming
            cls.lib.FrmGrab_SetMaxFps.argtypes = [FrmGrabberPtr, c_double]
            cls.lib.FrmGrab_SetMaxFps.restype = c_int

            cls.lib.FrmGrab_Start.argtypes = [FrmGrabberPtr]
            cls.lib.FrmGrab_Start.restype = c_int

            cls.lib.FrmGrab_Stop.argtypes = [FrmGrabberPtr]
            cls.lib.FrmGrab_Stop.restype = None

            # Frame
            cls.lib.FrmGrab_Frame.argtypes = [FrmGrabberPtr, c_uint32, c_void_p]
            cls.lib.FrmGrab_Frame.restype = POINTER(V2U_GrabFrame2)

            cls.lib.FrmGrab_Release.argtypes = [FrmGrabberPtr, POINTER(V2U_GrabFrame2)]
            cls.lib.FrmGrab_Release.restype = None

            # Memory cleanup
            cls.lib.FrmGrab_Free.argtypes = [c_void_p]
            cls.lib.FrmGrab_Free.restype = None

            cls.lib.FrmGrab_SetAlloc.argtypes = [
                FrmGrabberPtr,
                POINTER(FrmGrabMemCB),
                c_void_p,
            ]
            cls.lib.FrmGrab_SetAlloc.restype = None

            cls.lib.FrmGrab_Init()
            cls.is_functional = True  # IF we made it, then it works

        except AttributeError as err:
            raise RuntimeError(
                "Epiphan library is not accessible, possibly wrong architecture"
            ) from err

    @classmethod
    def cleanup_library(cls):
        if cls.is_functional:
            cls.lib.FrmGrab_Deinit()


class CapturedFrame:
    def __init__(self, data: bytes, width: int, height: int,
                 palette: int, vfreq: int, retcode: int):
        self.data = data
        self.width = width
        self.height = height
        self.palette = palette
        self.vfreq = vfreq
        self.retcode = retcode

    def __repr__(self):
        return (f"CapturedFrame({self.width}x{self.height}, "
                f"palette=0x{self.palette:x}, {len(self.data)} bytes)")

    def to_numpy(self):
        """Return the pixel buffer as a numpy uint8 array.

        RGB24 -> shape (H, W, 3) ; Y8 -> shape (H, W) ; other formats
        return a flat 1D array (caller knows the layout). Returns None if
        the frame has no usable pixel data.
        """
        import numpy as np
        if not self.data or self.width <= 0 or self.height <= 0:
            return None
        arr = np.frombuffer(self.data, dtype=np.uint8)
        fmt = self.palette & V2U_GRABFRAME_FORMAT_MASK
        if fmt == V2U_GRABFRAME_FORMAT_RGB24:
            n = self.height * self.width * 3
            if arr.size < n:
                return None
            return arr[:n].reshape(self.height, self.width, 3).copy()
        if fmt == V2U_GRABFRAME_FORMAT_Y8:
            n = self.height * self.width
            if arr.size < n:
                return None
            return arr[:n].reshape(self.height, self.width).copy()
        return arr.copy()


class EpiphanFrameGrabber:
    def __init__(self):
        EpiphanLibraryWrapper.setup_library()
        self.device: FrmGrabLocalPtr = None

    def initialize_device(self):
        self.device = EpiphanLibraryWrapper.lib.FrmGrabLocal_Open()
        if not self.device:
            raise RuntimeError("No frame grabber found")

    def get_serial_number(self) -> str:
        sn = EpiphanLibraryWrapper.lib.FrmGrab_GetSN(self.device)
        return sn.decode() if sn else None

    def get_product_name(self) -> str:
        name = EpiphanLibraryWrapper.lib.FrmGrab_GetProductName(self.device)
        return name.decode() if name else None

    def get_location(self) -> str:
        loc = EpiphanLibraryWrapper.lib.FrmGrab_GetLocation(self.device)
        return loc.decode() if loc else None

    def get_video_mode(self) -> V2U_VideoMode:
        mode = V2U_VideoMode()
        EpiphanLibraryWrapper.lib.FrmGrab_GetVideoMode(self.device, byref(mode))
        return mode

    def detect_video_mode(self) -> V2U_VideoMode | None:
        mode = V2U_VideoMode()
        ok = EpiphanLibraryWrapper.lib.FrmGrab_DetectVideoMode(self.device, byref(mode))
        return mode if ok == V2U_TRUE else None

    def get_capture_params(self) -> V2U_GrabParameters:
        params = V2U_GrabParameters()
        ok = EpiphanLibraryWrapper.lib.FrmGrab_GetGrabParams(self.device, byref(params))
        if ok != V2U_TRUE:
            raise RuntimeError("Failed to get grab parameters")
        return params

    def set_capture_params(self, params: V2U_GrabParameters):
        ok = EpiphanLibraryWrapper.lib.FrmGrab_SetGrabParams(self.device, byref(params))
        if ok != V2U_TRUE:
            raise RuntimeError("Failed to set grab parameters")

    def start_streaming(self):
        if EpiphanLibraryWrapper.lib.FrmGrab_Start(self.device) != V2U_TRUE:
            raise RuntimeError("Failed to start streaming")

    def stop_streaming(self):
        EpiphanLibraryWrapper.lib.FrmGrab_Stop(self.device)

    def close(self):
        if self.device:
            EpiphanLibraryWrapper.lib.FrmGrab_Close(self.device)
            self.device = None

    def grab_frame(
        self, format=V2U_GRABFRAME_FORMAT_RGB24, crop: V2URect | None = None
    ) -> CapturedFrame | None:
        crop_ptr = byref(crop) if crop else None
        frame_ptr = EpiphanLibraryWrapper.lib.FrmGrab_Frame(
            self.device, format, crop_ptr
        )
        if not frame_ptr:
            return None
        try:
            f = frame_ptr.contents
            length = int(f.imagelen)
            if length and f.pixbuf:
                data = ctypes.string_at(f.pixbuf, length)
            else:
                data = b""
            return CapturedFrame(
                data=data,
                width=int(f.crop.width),
                height=int(f.crop.height),
                palette=int(f.palette),
                vfreq=int(f.mode.vfreq),
                retcode=int(f.retcode),
            )
        finally:
            EpiphanLibraryWrapper.lib.FrmGrab_Release(self.device, frame_ptr)

    def __enter__(self):
        if self.device is None:
            self.initialize_device()
        return self

    def __exit__(self, exc_type, exc, tb):
        self.close()
